py-engineio: drop py37 subport

--- a/python/py-engineio/Portfile
+++ b/python/py-engineio/Portfile
@@ -21,11 +21,10 @@ checksums           rmd160  53d84615df0379012df91164f25a481ebc04a3f5 \
                     sha256  07ddde1ddc54ef3b02c5718cd14f0e4158035b3e99b310b2374abe5b45e934ad \
                     size    314293
 
-python.versions     37 38 39 310 311
+python.versions     38 39 310 311
 
 if {${name} ne ${subport}} {
     depends_build-append \
-                    port:py${python.version}-setuptools \
                     port:py${python.version}-sphinx
 
     depends_run-append \
@@ -44,6 +43,4 @@ if {${name} ne ${subport}} {
         copy ${doc_build_dir}/html ${destroot}${prefix}/share/doc/${subport}
         copy ${doc_build_dir}/man ${destroot}${python.prefix}
     }
-
-    livecheck.type  none
 }
