py-acme: add py312 subport

--- a/python/py-acme/Portfile
+++ b/python/py-acme/Portfile
@@ -17,7 +17,7 @@ homepage            https://certbot.eff.org/
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     38 39 310 311
+python.versions     38 39 310 311 312
 
 checksums           rmd160  59eb0177b4b6765c41ba37f2cb1a940f9b49a0ba \
                     sha256  a1055bd784a95fde5aea565295407aa512addfe8490a675bc707e40c2446b67e \
