--- a/security/certbot/Portfile
+++ b/security/certbot/Portfile
@@ -21,16 +21,18 @@ checksums           rmd160  59eb0177b4b6765c41ba37f2cb1a940f9b49a0ba \
                     sha256  a1055bd784a95fde5aea565295407aa512addfe8490a675bc707e40c2446b67e \
                     size    1346413
 
-variant python38 conflicts python39 python310 python311 description {Use Python 3.8} {}
-variant python39 conflicts python38 python310 python311 description {Use Python 3.9} {}
-variant python310 conflicts python38 python39 python311 description {Use Python 3.10} {}
-variant python311 conflicts python38 python39 python310 description {Use Python 3.11} {}
+variant python38 conflicts python39 python310 python311 python312 description {Use Python 3.8} {}
+variant python39 conflicts python38 python310 python311 python312 description {Use Python 3.9} {}
+variant python310 conflicts python38 python39 python311 python312 description {Use Python 3.10} {}
+variant python311 conflicts python38 python39 python310 python312 description {Use Python 3.11} {}
+variant python312 conflicts python38 python39 python310 python311 description {Use Python 3.12} {}
 
-if {![variant_isset python38] && ![variant_isset python39] && ![variant_isset python310]} {
-    default_variants +python311
+if {![variant_isset python38] && ![variant_isset python39] \
+        && ![variant_isset python310] && ![variant_isset python311] } {
+    default_variants +python312
 }
 
-foreach pv {311 310 39 38} {
+foreach pv {312 311 310 39 38} {
     if {[variant_isset python${pv}]} {
         python.default_version ${pv}
         break
