py-pygls: set correct build backend
Fixes: https://trac.macports.org/ticket/69305

--- a/python/py-pygls/Portfile
+++ b/python/py-pygls/Portfile
@@ -25,15 +25,10 @@ checksums           rmd160  dcaa274fd872b5678c13bde98f982c5cdf427603 \
                     sha256  1b44ace89c9382437a717534f490eadc6fda7c0c6c16ac1eaaf5568e345e4fb8 \
                     size    45539
 
-python.pep517       yes
+python.pep517_backend   poetry
 python.versions     39 310 311 312
 
 if {${name} ne ${subport}} {
-    depends_build-append    port:py${python.version}-setuptools \
-                            port:py${python.version}-setuptools_scm \
-                            port:py${python.version}-toml \
-                            port:py${python.version}-wheel
-
     depends_run-append      port:py${python.version}-lsprotocol \
                             port:py${python.version}-typeguard \
                             port:py${python.version}-typing_extensions
