go-1.4: use explicit GOHOSTARCH on i386

--- a/lang/go-1.4/Portfile
+++ b/lang/go-1.4/Portfile
@@ -65,6 +65,12 @@ build.env           GOROOT=${GOROOT} \
                     GCC=${configure.cc} \
                     CGO_ENABLED=0
 
+if {${configure.build_arch} eq "i386"} {
+    # Build system is defunct and may not respect GOARCH.
+    build.env-append \
+                    GOHOSTARCH=${GOARCH}
+}
+
 use_parallel_build  no
 
 post-build {
