libsoup, -devel: avoid old Xcode clang of < 10.7

--- a/gnome/libsoup-devel/Portfile
+++ b/gnome/libsoup-devel/Portfile
@@ -58,7 +58,7 @@ depends_lib-append \
                     port:nghttp2
 
 compiler.blacklist-append \
-                    {*gcc-[34].*}
+                    {*gcc-[34].*} {clang < 421}
 
 configure.args-append \
                     -Dbrotli=enabled \
