imagemagick7:  New port
.

* Install everything to isolated location ${prefix}/lib/imagemagick7.
* Avoid all conflicts with original ImageMagick port (IM6).
* Make no changes to original ImageMagick port.

--- a/graphics/imagemagick7/Portfile
+++ b/graphics/imagemagick7/Portfile
@@ -16,17 +16,18 @@ PortGroup           github 1.0
 # Imagick will run but may behave surprisingly in Unknown on line 0.
 
 name                imagemagick7
-github.setup        ImageMagick ImageMagick 7.1.1-22
+github.setup        ImageMagick ImageMagick 7.1.1-27
 revision            0
 
-checksums           rmd160  aaea62c06d1c0fd1bc72829b1969267ba82ded43 \
-                    sha256  959b513bebe4269482b9bea64893cec221c980b4ec6be93c2c9b774092c37f83 \
-                    size    15055395
+checksums           rmd160  ca2384efe3667be5b0bdaa14f630f665fa94c127 \
+                    sha256  4f01db0fffd27cf3227d06be44d10229f5631e7e925ad29083e030dac93ec369 \
+                    size    15397286
 
 categories          graphics devel
 maintainers         {@Dave-Allured noaa.gov:dave.allured} \
                     openmaintainer
 license             Apache-2
+##use_xz              yes
 platforms           darwin
 use_parallel_build  yes
 
@@ -86,7 +87,11 @@ depends_run         port:urw-fonts
 
 configure.ccache    no
 
-configure.args      --enable-shared \
+configure.pre_args  --prefix=${prefix}/lib/imagemagick7
+configure.args      --mandir=${prefix}/lib/imagemagick7/share/man
+
+configure.args-append \
+                    --enable-shared \
                     --enable-static \
                     --disable-silent-rules \
                     --with-frozenpaths \
