pulseaudio: Use MacPorts perl and XML::Parser again
Closes: https://trac.macports.org/ticket/69171

Partially reverts a66e323ee48dcb954f60f89803885f3929a1f9c4

--- a/audio/pulseaudio/Portfile
+++ b/audio/pulseaudio/Portfile
@@ -7,6 +7,7 @@ PortSystem          1.0
 PortGroup           active_variants 1.1
 PortGroup           compiler_blacklist_versions 1.0
 PortGroup           meson 1.0
+PortGroup           perl5 1.0
 
 name                pulseaudio
 version             17.0
@@ -32,9 +33,12 @@ checksums           rmd160  091da3b1d4d7e4ef464cfc53969995d408985bae \
                     sha256  053794d6671a3e397d849e478a80b82a63cb9d8ca296bd35b73317bb5ceb87b5 \
                     size    1566556
 
+perl5.branches      5.34
+
 depends_build-append \
                     port:gettext \
-                    port:pkgconfig
+                    port:p${perl5.major}-xml-parser \
+                    path:bin/pkg-config:pkgconfig
 
 depends_lib-append  port:dbus \
                     port:fftw-3-single \
@@ -70,10 +74,15 @@ platform darwin {
 # and posts on the mailing list.
 patchfiles-append   patch-src_modules_macosx_module_coreaudio_device.c-respect-PA_NAME_MAX.diff \
                     patch-src_daemon_default.pa.in-skip-consolekit-and-systemdlogin.diff \
-                    patch-src_pulsecore_shm.c_Static_assert.diff
+                    patch-src_pulsecore_shm.c_Static_assert.diff \
+                    perl.patch
 
 platform darwin 8 {
     patchfiles-append   patch-src_modules_macosx_module_coreaudio_device.c-tiger-compat.diff
+}
+
+post-patch {
+    reinplace "s|@PERL@|${perl5.bin}|g" ${worksrcpath}/man/meson.build
 }
 
 compiler.c_standard 2011
