--- a/perl/p5-devel-dumptrace/Portfile
+++ b/perl/p5-devel-dumptrace/Portfile
@@ -3,16 +3,17 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.branches      5.34
+perl5.branches      5.28 5.30 5.32 5.34
 perl5.setup         Devel-DumpTrace 0.29
 revision            0
-
-supported_archs     noarch
 license             Artistic-1
 maintainers         nomaintainer
 
 description         Evaluate and print out each line before it is executed.
 long_description    {*}${description}
+
+platforms           {darwin any}
+supported_archs     noarch
 
 checksums           rmd160  d0ef05cc5c913bdc12525853e62cb4773f028c04 \
                     sha256  b9d57dbac42a008f73529d2d7d38114a58ea95094a73b14713b4c51ed4203fcd \
