jasper: update to 4.2.0

--- a/graphics/jasper/Portfile
+++ b/graphics/jasper/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 PortGroup       cmake 1.0
 PortGroup       github 1.0
 
-github.setup    jasper-software jasper 4.1.2 version-
+github.setup    jasper-software jasper 4.2.0 version-
 categories      graphics
 license         JasPer-2
 maintainers     {jmr @jmroot} openmaintainer
@@ -18,8 +18,8 @@ long_description \
 homepage        http://www.ece.uvic.ca/~mdadams/jasper/
 
 github.tarball_from releases
-checksums       rmd160 a44f1bb7d074a34ab556764a5592f26320258314 \
-                sha256 22392e439b87c79aaf8689ec79a286a7147e811c4bee34edf3d0b239798d672b
+checksums       rmd160 371aae9282abf7a8af8ddd606abd207c53de3c4a \
+                sha256 69f0b08a0cc281a06eaf7feed510736854bbff9af89ab1d01b77382ad57ec957
 
 depends_lib     path:include/turbojpeg.h:libjpeg-turbo
 
@@ -29,7 +29,8 @@ cmake.out_of_source yes
 
 configure.args-append   -DGLUT_glut_LIBRARY=${configure.sdkroot}/System/Library/Frameworks/GLUT.framework \
                         -DJAS_ENABLE_LIBHEIF=OFF \
-                        -DJAS_ENABLE_DOC=OFF
+                        -DJAS_ENABLE_DOC=OFF \
+                        -DJAS_PACKAGING=ON
 
 if {[vercmp ${configure.sdk_version} <= 10.10]} {
     patchfiles-append   max_align_t.patch
