--- a/devel/git-town/Portfile
+++ b/devel/git-town/Portfile
@@ -3,23 +3,25 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/git-town/git-town 7.8.0 v
+go.setup            github.com/git-town/git-town 12.0.0 v
+github.tarball_from archive
+revision            0
 
 description         High-level command-line interface for Git
 long_description    {*}${description}
-
 
 categories          devel
 installs_libs       no
 license             MIT
 maintainers         {karpenko.ca:alexei @akarpenko} \
+                    {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
 homepage            https://www.git-town.com/
 
-checksums           sha256  d6e06d395def2116b76cb63f548a9a4cccaed12cb804c84396f4150568609673 \
-                    rmd160  cf88fb00c64ce4100b464a3f390f676d4a3f6499 \
-                    size    2532916
+checksums           sha256  6a7fe5b3911396be7bb485bc37d745986c7d3b95331f1e03dfd0bf277608cb14 \
+                    rmd160  a37fc0d82bcf96e90d5ded12691cd3af4c108121 \
+                    size    4176541
 
 build.pre_args-append \
     -ldflags \"-X ${go.package}/src/cmd.version=v${version}\"
