expat: Disable tests for OS X 10.8 and earlier
As of expat 2.6.0, it verifies that the compiler supports C++11 when
the tests are enabled. The tests already required C++11 before, the
configure script just didn't check for that before. This causes a
dependency cycle on pre-10.8 systems that don't ship with a C++11
compiler because MacPorts clangs eventually depend on expat.

--- a/textproc/expat/Portfile
+++ b/textproc/expat/Portfile
@@ -39,10 +39,16 @@ if {${os.platform} eq "darwin" && ${os.major} < 11} {
 
 configure.args      --without-docbook
 
-use_parallel_build  yes
+if {${os.platform} eq "darwin" && ${os.major} < 13} {
+    configure.args-append \
+                    --without-tests
+} else {
+    compiler.cxx_standard \
+                    2011
 
-test.run            yes
-test.target         check
+    test.run        yes
+    test.target     check
+}
 
 post-destroot {
     set docdir ${destroot}${prefix}/share/doc/${name}
