bind9: depend on jemalloc on 10.6+, not earlier

--- a/net/bind9/Portfile
+++ b/net/bind9/Portfile
@@ -92,6 +92,13 @@ platform darwin 9 {
     configure.args-append --with-dlopen=no
 }
 
+if {${os.platform} eq "darwin" && ${os.major} < 10} {
+    # Until this is fixed: https://trac.macports.org/ticket/65945
+    depends_lib-delete \
+                path:lib/pkgconfig/jemalloc.pc:jemalloc
+    configure.args-append --with-jemalloc=no
+}
+
 post-destroot    {
     # Ensure needed directories
     xinstall -o named -g named -m 755 -d \
