--- a/python/py-black/Portfile
+++ b/python/py-black/Portfile
@@ -5,7 +5,7 @@ PortGroup           python 1.0
 PortGroup           select 1.0
 
 name                py-black
-version             23.12.1
+version             24.1.1
 
 supported_archs     noarch
 platforms           {darwin any}
@@ -27,9 +27,9 @@ long_description \
 
 homepage            https://${python.rootname}.readthedocs.io/
 
-checksums           rmd160  28553d217a1de16fbf833a55bbfeb5c04e97561a \
-                    sha256  4ce3ef14ebe8d9509188014d96af1c456a910d5b5cbf434a09fef7e024b3d0d5 \
-                    size    620809
+checksums           rmd160  375720967373aadde8c3c09950c195a85f6145cb \
+                    sha256  48b5760dcbfe5cf97fd4fba23946681f3a81514c6ab8a45b50da67ac8fbc6c7b \
+                    size    623755
 
 python.versions     38 39 310 311 312
 python.pep517_backend   hatch
@@ -48,11 +48,7 @@ if {${subport} ne ${name}} {
 
     if {${python.version} < 311} {
         depends_lib-append \
-                    port:py${python.version}-tomli
-    }
-
-    if {${python.version} < 310} {
-        depends_lib-append \
+                    port:py${python.version}-tomli \
                     port:py${python.version}-typing_extensions
     }
 
