--- a/perl/p5-test-warnings/Portfile
+++ b/perl/p5-test-warnings/Portfile
@@ -22,6 +22,9 @@ if {${perl5.major} != ""} {
     depends_build-append \
                     port:p${perl5.major}-cpan-meta-check
 
-    depends_lib-append \
-                    port:p${perl5.major}-test2-suite
+    #depends_lib-append \
+    #                port:p${perl5.major}-test2-suite
+    notes-append    "$subport can optionally use p${perl5.major}-test2-suite,\
+                     but does not depend on it because that would cause a\
+                     circular dependency."
 }
