bind9: use path-style deps for libuv and jemalloc

--- a/net/bind9/Portfile
+++ b/net/bind9/Portfile
@@ -38,10 +38,10 @@ use_xz          yes
 depends_build   port:pkgconfig
 
 depends_lib     path:lib/libssl.dylib:openssl  \
-                port:libuv \
+                path:lib/pkgconfig/libuv.pc:libuv \
                 port:libxml2 \
                 port:nghttp2 \
-                port:jemalloc \
+                path:lib/pkgconfig/jemalloc.pc:jemalloc \
                 port:json-c \
                 port:libidn2 \
                 port:lmdb
