R-crew: update to 0.9.0; R-crew.cluster: update to 0.3.0

--- a/R/R-crew/Portfile
+++ b/R/R-crew/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github wlandau crew 0.8.0
+R.setup             github wlandau crew 0.9.0
 revision            0
 categories-append   parallel
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -11,17 +11,19 @@ license             MIT
 description         Distributed worker launcher
 long_description    {*}${description}
 homepage            https://wlandau.github.io/crew
-checksums           rmd160  e69f4147d29bc0f7efd08b8fe6f6730e7c1805f9 \
-                    sha256  0a254754d2d50b52577135ac355540c557f630cbada7f4e75934036a57187cd6 \
-                    size    1159415
+checksums           rmd160  a5d37c6245b765e668066bf16287ac937b87bd3e \
+                    sha256  c43de497fa388af5a0b130bda41bff97ddde41dfdeea2343227b0b33ec905b68 \
+                    size    1176340
 supported_archs     noarch
 
 depends_lib-append  port:R-cli \
                     port:R-data.table \
                     port:R-getip \
+                    port:R-later \
                     port:R-mirai \
                     port:R-nanonext \
                     port:R-processx \
+                    port:R-promises \
                     port:R-ps \
                     port:R-R6 \
                     port:R-rlang \
