--- a/php/php-yaf/Portfile
+++ b/php/php-yaf/Portfile
@@ -8,7 +8,7 @@ categories-append       net devel
 maintainers             {ryandesign @ryandesign} openmaintainer
 license                 PHP-3.01
 
-php.branches            5.3 5.4 5.5 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2
+php.branches            5.3 5.4 5.5 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3
 php.pecl                yes
 
 if {[vercmp ${php.branch} >= 7.0]} {
@@ -21,6 +21,10 @@ if {[vercmp ${php.branch} >= 7.0]} {
     if {[vercmp ${php.branch} >= 8.2]} {
         patchfiles-append \
                         php82.patch
+        if {[vercmp ${php.branch} >= 8.3]} {
+            patchfiles-append \
+                        php83.patch
+        }
     }
 } else {
     version             2.3.5
