R-parameters: update to 0.21.5

--- a/R/R-parameters/Portfile
+++ b/R/R-parameters/Portfile
@@ -3,8 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-# Revert to GitHub once updated there.
-R.setup             cran easystats parameters 0.21.4 v
+R.setup             github easystats parameters 0.21.5 v
 revision            0
 categories-append   math
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -12,9 +11,9 @@ license             GPL-3
 description         Processing of model parameters
 long_description    {*}${description}
 homepage            https://easystats.github.io/parameters
-checksums           rmd160  a717bc2d6662461b64687e107b9a81c2c3756efc \
-                    sha256  c2a566135b1b0b62697fd5866981d9ba63edba1e181d19492177dbb61d90bd14 \
-                    size    674130
+checksums           rmd160  6d04ab818cc85a0ad94a7535b2c5479ca85a9950 \
+                    sha256  8bf11b2b1588752ee4d5bef4e3412f689a52f18e3754a69979d437498c8138c1 \
+                    size    1018095
 supported_archs     noarch
 
 depends_lib-append  port:R-bayestestR \
