R-pcalg: update to 2.7-10

--- a/R/R-pcalg/Portfile
+++ b/R/R-pcalg/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran r-forge pcalg 2.7-9
+R.setup             cran r-project pcalg 2.7-10
 revision            0
 categories-append   math
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -11,9 +11,9 @@ license             GPL-2+
 description         Methods for graphical models and causal inference
 long_description    {*}${description}
 homepage            https://pcalg.r-forge.r-project.org
-checksums           rmd160  b3680b40e820a1cff0b82a16a6b811dfadb901c7 \
-                    sha256  b8b1d292e79a9bb495d195b730f99e1dc5a6686c39fb98fc1574982e882c1116 \
-                    size    4068555
+checksums           rmd160  25be86fe3aadf31ad2909fe53f4368c7cd713cdb \
+                    sha256  8ec32585c3b68e0f3a6750d28b9109e47f9254eb673b4a6b8fa8a9e892051cd3 \
+                    size    4073284
 
 depends_lib-append  port:R-abind \
                     port:R-bdsmatrix \
