nginx: use download.html for livecheck

--- a/www/nginx/Portfile
+++ b/www/nginx/Portfile
@@ -465,5 +465,5 @@ variant vod description {Add MP4 repackeging for HLS, DASH, HDS, HSS using nginx
 }
 
 livecheck.type      regexm
-livecheck.url       ${homepage}
-livecheck.regex     {nginx-(\d+\.\d+\.\d+)</a>\s+stable}
+livecheck.url       ${homepage}/en/download.html
+livecheck.regex     {nginx-(1\.24\.\d+)}
