--- a/python/py-extension-helpers/Portfile
+++ b/python/py-extension-helpers/Portfile
@@ -5,6 +5,8 @@ PortGroup           python 1.0
 
 name                py-extension-helpers
 version             0.1
+revision            0
+
 categories-append   devel science
 license             BSD
 supported_archs     noarch
@@ -19,9 +21,9 @@ checksums           rmd160  056e7ad8728abafa51fa2ca4742feb393e30c925 \
                     sha256  ac8a6fe91c6d98986a51a9f08ca0c7945f8fd70d95b662ced4040ae5eb973882 \
                     size    24306
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-    depends_build-append    port:py${python.version}-setuptools_scm
+    depends_build-append  port:py${python.version}-setuptools_scm
     depends_lib-append    port:py${python.version}-setuptools
 }
