bcunit: fix livecheck

--- a/devel/bcunit/Portfile
+++ b/devel/bcunit/Portfile
@@ -32,3 +32,5 @@ configure.args-append \
                     -DCMAKE_INSTALL_BINDIR=${prefix} \
                     -DCMAKE_INSTALL_LIBDIR=${prefix}/lib \
                     -DCMAKE_INSTALL_INCLUDEDIR=${prefix}/include
+
+github.livecheck.regex  {([0-9.]+)}
