py-fido2: drop py37 subport

--- a/python/py-fido2/Portfile
+++ b/python/py-fido2/Portfile
@@ -23,9 +23,8 @@ checksums           rmd160  dd43e08e929f63b96fb0db19811b2409a09cc606 \
                     sha256  6110d913106f76199201b32d262b2857562cc46ba1d0b9c51fbce30dc936c573 \
                     size    248554
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
-python.pep517       yes
 python.pep517_backend poetry
 
 if {${name} ne ${subport}} {
