py-fiona: drop py37 subport

--- a/python/py-fiona/Portfile
+++ b/python/py-fiona/Portfile
@@ -8,8 +8,7 @@ version             1.9.5
 categories-append   gis
 license             BSD
 
-python.versions     37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -27,7 +26,6 @@ checksums           md5 e5b533bdfc5cc48fba7257e1c0285552 \
                     size   409295
 
 if {${name} ne ${subport}} {
-
     depends_build-append \
                         port:py${python.version}-cython \
                         port:py${python.version}-numpy
