fq: update to 0.10.0

--- a/sysutils/fq/Portfile
+++ b/sysutils/fq/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/wader/fq 0.9.0 v
+go.setup            github.com/wader/fq 0.10.0 v
 github.tarball_from archive
 revision            0
 
@@ -31,9 +31,9 @@ destroot {
 }
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  2fe6a43c9cbb99f14e96abc2513f94c62277824a \
-                        sha256  431e68e31bb47049872d793cf0f32468c0b02d23c3c812e10ce0e4498b11a36d \
-                        size    15107174
+                        rmd160  5ea1ed36e1d7adef27d9d5d2a9188c378c0f08f8 \
+                        sha256  dc94199f0f1d3c6abcf8dcbc4d5a5f4fc127fe2d45c01df3d5a570d3f5a8502c \
+                        size    17319298
 
 go.vendors          gopkg.in/yaml.v3 \
                         lock    v3.0.1 \
@@ -50,36 +50,36 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  e26a72d542901d19f6dde4e07746f72206fb8701 \
                         sha256  ef54709caaafdd8b27ce3d5f7c53408f11bc5fd1688c1c4f328de8ed268b3188 \
                         size    8972503 \
+                    golang.org/x/term \
+                        lock    v0.17.0 \
+                        rmd160  31ced8e78b09ea4d3033ec24f1f27f221f9e4648 \
+                        sha256  a83f4b75c5448d85a9167b3bec3f45d7a7564088ce376cf0c26b7dd2bff1d563 \
+                        size    14743 \
                     golang.org/x/sys \
-                        lock    v0.14.0 \
-                        rmd160  d36195a767e48169c413eb77843e71fa014e7ac2 \
-                        sha256  9407ff6fbe0423f2559a99f7ad55479e1eb20201c5dfb9e885abb83c7b44bfc4 \
-                        size    1442384 \
+                        lock    v0.17.0 \
+                        rmd160  bc96655eb5e0e6a21c3c7faf4197a25b5e974f53 \
+                        sha256  5f94836d82aa1bbb99219d62a5a379b2b36f62dd8ea59207dcbb86b35eae5b1d \
+                        size    1446795 \
                     golang.org/x/net \
-                        lock    v0.18.0 \
-                        rmd160  9a4a8e921ea11299a999fed57fa91004c50067f2 \
-                        sha256  fb695f11fd469009cd539e410865e6260e1c1e5dbc18983953e491173722bad3 \
-                        size    1468665 \
+                        lock    v0.21.0 \
+                        rmd160  f75340f16f42b617230110603e41bd586cdef8fe \
+                        sha256  8fed668d8604e2b59b5cf00ebc327f710e1af177eab7a73d9ddc68992cd9bea9 \
+                        size    1487222 \
                     golang.org/x/exp \
                         lock    9a3e6036ecaa \
                         rmd160  d550becf8d5e2fee3164793c7c9cc30a54d6444c \
                         sha256  869d27c4289deefb75d9483ca2fca84dd4dca1aa9ba36c0e9c0c6a3b6bb7fd20 \
                         size    1635127 \
                     golang.org/x/crypto \
-                        lock    v0.15.0 \
-                        rmd160  08e93131b3d22ceacee5f50d56f88ff2bb591df5 \
-                        sha256  bc663378acfc6d12da33eb2a58fccd7c8c3e254e86bcff44fe714088c05bff93 \
-                        size    1801178 \
-                    github.com/wader/readline \
-                        lock    bcb7158e7448 \
-                        rmd160  4910c89728004524b84e6adcf39c9484bfaaa4d8 \
-                        sha256  151b2a252f19d4d8e1f25236a9673c4fab5cb03e5d76a6d41e89e9233e9cea4f \
-                        size    40357 \
+                        lock    v0.19.0 \
+                        rmd160  0296e5136cec0cc12353ff810307bb8f6c8af1f1 \
+                        sha256  e6b2f01f141e0711e914e795ac9948a01811aee8a56c96a37151afd2644461a0 \
+                        size    1810325 \
                     github.com/wader/gojq \
-                        lock    2b6d9e2f4985 \
-                        rmd160  7075f5bfdcf91ea59ad2af8032a309078e358bd6 \
-                        sha256  cd7f8042a0dc62b37870cefa6f5ce69c5bde3a3f38bebccef18e1d97215aedc7 \
-                        size    134465 \
+                        lock    e920352821d6 \
+                        rmd160  f8868b763f3cc99dcecf9a0c126d1d3962416e65 \
+                        sha256  2ffc80e413978a89cd325eb89264e42754ab6c821c1c9a2b36e7fe789471dfd2 \
+                        size    134415 \
                     github.com/pmezard/go-difflib \
                         lock    v1.0.0 \
                         rmd160  fc879bfbdef9e3ff50844def58404e2b5a613ab8 \
@@ -130,6 +130,11 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  23c095b7e2bc6f5a978d771e4ecc9f7b0f204491 \
                         sha256  6a2d69e63124670c8b8105fb34d32f3f34f6816f93bf5a6e28f85c428c5b40ae \
                         size    66136 \
+                    github.com/ergochat/readline \
+                        lock    v0.1.0 \
+                        rmd160  4f9763ca063bc747f706fd1a470f086c969f3d3b \
+                        sha256  e1cb0b26e9c5673cafa69718f61edb8bea198b52da7a5e276a0c4925e51a6fb7 \
+                        size    47593 \
                     github.com/creasty/defaults \
                         lock    v1.7.0 \
                         rmd160  3021f8240f91b5409c762b085cdf7461879473a6 \
