btop: update to 1.3.2

--- a/sysutils/btop/Portfile
+++ b/sysutils/btop/Portfile
@@ -5,16 +5,17 @@ PortGroup           github 1.0
 PortGroup           makefile 1.0
 PortGroup           compiler_blacklist_versions 1.0
 
-github.setup        aristocratos btop 1.3.1 v
+github.setup        aristocratos btop 1.3.2 v
+revision            0
 github.tarball_from archive
 epoch               1
 categories          sysutils
 license             Apache-2
 maintainers         {samasaur.com:sam @samasaur1} openmaintainer
 
-checksums           rmd160  694c9b48b57d96b1de55a9e2c924c1a900bfad60 \
-                    sha256  9e7faa30550137598a712fc28c1fb907e48a1fa1a5b2fa2f939195cf91e1816e \
-                    size    1144504
+checksums           rmd160  20b69f7547cc6d795a0fdc068aa5966d5dbb9240 \
+                    sha256  331d18488b1dc7f06cfa12cff909230816a24c57790ba3e8224b117e3f0ae03e \
+                    size    1144620
 
 description         A monitor of resources
 
