py-pikepdf: update to 8.12.0.post1

--- a/python/py-pikepdf/Portfile
+++ b/python/py-pikepdf/Portfile
@@ -6,7 +6,7 @@ PortGroup           python 1.0
 PortGroup           compiler_blacklist_versions 1.0
 
 name                py-pikepdf
-github.setup        pikepdf pikepdf 8.12.0 v
+github.setup        pikepdf pikepdf 8.12.0.post1 v
 revision            0
 categories-append   graphics
 license             MPL-2
@@ -17,9 +17,9 @@ long_description    {*}${description}
 
 python.versions     38 39 310 311 312
 
-checksums           rmd160  9088a0c26ef801f65b5725d05b4470c0d91540e1 \
-                    sha256  abb40f19b6159e9b56fc0a5d42d9515a03c6e316cc2e6719090236c0b254cb3a \
-                    size    2925500
+checksums           rmd160  d18a019366ffadb5e5a75f9a57970408d8e81116 \
+                    sha256  3f900926bf583782b6d84f442a984e40d6eed3e40216478f4572c44ecde6074a \
+                    size    2925494
 
 if {${name} ne ${subport}} {
     depends_build-append \
