--- a/python/py-freetype/Portfile
+++ b/python/py-freetype/Portfile
@@ -16,7 +16,7 @@ platforms           {darwin any}
 homepage            https://github.com/rougier/freetype-py
 use_zip             yes
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 checksums           rmd160  45886f13d04a4e848df0f5af183f8ddc7b779947 \
                     sha256  8ad81195d2f8f339aba61700cebfbd77defad149c51f59b75a2a5e37833ae12e \
