py-future: drop py3{5,6} subports

--- a/python/py-future/Portfile
+++ b/python/py-future/Portfile
@@ -27,7 +27,7 @@ checksums           rmd160  364628e0cd4bcbedfbed66bf65c3324dfaee656c \
                     sha256  34a17436ed1e96697a86f9de3d15a3b0be01d8bc8de9c1dffd59fb8234ed5307 \
                     size    840896
 
-python.versions     27 35 36 37 38 39 310 311 312
+python.versions     27 37 38 39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_lib-append \
