roundcubemail: update to 1.6.6, add php83

--- a/www/roundcubemail/Portfile
+++ b/www/roundcubemail/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           github 1.0
 
-github.setup        roundcube roundcubemail 1.6.5
+github.setup        roundcube roundcubemail 1.6.6
 github.tarball_from releases
 categories          www mail php
 license             GPL-3+
@@ -23,7 +23,7 @@ platforms           darwin freebsd
 
 # The php variants deliberately do not conflict
 
-foreach php {php73 php74 php80 php81 php82} {
+foreach php {php73 php74 php80 php81 php82 php83} {
     variant ${php} description "Use ${php}" "
         depends_run-append  port:${php}-mbstring \
                             port:${php}-mysql \
@@ -33,13 +33,13 @@ foreach php {php73 php74 php80 php81 php82} {
     "
 }
 
-if {![variant_isset php73] && ![variant_isset php74] && ![variant_isset php80] && ![variant_isset php81] && ![variant_isset php82]} {
-    default_variants +php82
+if {![variant_isset php73] && ![variant_isset php74] && ![variant_isset php80] && ![variant_isset php81] && ![variant_isset php82] && ![variant_isset php82]} {
+    default_variants +php83
 }
 
-checksums           rmd160  583c1e79207accad1cd56fd28b29a6fa0972daa7 \
-                    sha256  6c830faa0674d917c426d9b694793743c51f8bf649cd6e7fc605957bcccd1730 \
-                    size    3947351
+checksums           rmd160  54c8a787b9003b80e05f25539a6582de69e1d58e \
+                    sha256  40e4d7505b01f401e757f7439930ed96b1245ffc3863dd326fcf21e0e5847c74 \
+                    size    3947110
 
 use_configure       no
 
