--- a/python/py-netaddr/Portfile
+++ b/python/py-netaddr/Portfile
@@ -4,14 +4,13 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-netaddr
-version             0.10.1
+version             1.0.0
 categories-append   devel
 platforms           {darwin any}
 license             BSD MIT
 supported_archs     noarch
 
-python.versions     37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,9 +19,9 @@ long_description    ${description}
 
 homepage            https://github.com/drkjam/netaddr/
 
-checksums           rmd160  afb01a9409af1164119d8275d6d86e32d95d6b7c \
-                    sha256  f4da4222ca8c3f43c8e18a8263e5426c750a3a837fdfeccf74c68d0408eaa3bf \
-                    size    2225283
+checksums           rmd160  bfcff4ecd085623492a74937a0464c102ba7093f \
+                    sha256  eb046b55354e7a5bf801c04902ae923bd699190242d89b099e896f9b2724b4d3 \
+                    size    2233464
 
 if {${name} ne ${subport}} {
     test.run            yes
