tmux: rewrite dependency lists

--- a/sysutils/tmux/Portfile
+++ b/sysutils/tmux/Portfile
@@ -30,8 +30,14 @@ homepage        https://tmux.github.io
 platforms       darwin
 license         BSD
 
-depends_lib     port:libevent \
+depends_build   port:pkgconfig
+depends_lib     port:libutf8proc \
+                port:libevent \
                 port:ncurses
+configure.args-append \
+                --enable-utf8proc \
+                --prefix=${prefix} \
+                --sysconfdir=${prefix}/etc
 
 if {${subport} eq ${name}} {
     github.tarball_from     releases
@@ -47,20 +53,14 @@ subport tmux-devel {
     use_autoreconf          yes
     autoreconf.cmd          ./autogen.sh
     autoreconf.args
-    depends_build           port:autoconf \
+    depends_build-append    port:autoconf \
                             port:automake \
-                            port:libtool \
-                            port:pkgconfig
+                            port:libtool
     post-extract {
         set reinplace_cmd [subst -nobackslashes -nocommands {s/AC_INIT\(\[tmux\], (next-[0-9]+\.[0-9]+)\)/AC_INIT([tmux], \1 (${version}))/g}]
         reinplace -E $reinplace_cmd ${worksrcpath}/configure.ac
     }
 }
-
-depends_lib-append          port:libutf8proc
-configure.args-append       --enable-utf8proc \
-                            --prefix=${prefix} \
-                            --sysconfdir=${prefix}/etc
 
 platform darwin {
     if {${os.major} < 23} {
@@ -96,7 +96,7 @@ post-destroot {
 }
 
 notes {
-    On legacy systems, consider installing port tmux-pasteboard to \
+    On legacy systems, consider installing port tmux-pasteboard to\
     integrate the system pasteboard with tmux.
 }
 
