tmux: do not overwrite build dep

--- a/sysutils/tmux/Portfile
+++ b/sysutils/tmux/Portfile
@@ -82,7 +82,7 @@ platform darwin 8 {
     configure.env-append    LIBNCURSES_CFLAGS=-D_APPLE_C_SOURCE
 
     # "No rule to make target `compat/forkpty-darwin.c'"
-    depends_build           port:gmake
+    depends_build-append    port:gmake
     build.cmd               gmake
 }
 
