rust-analyzer: update to 2024-02-12

--- a/devel/rust-analyzer/Portfile
+++ b/devel/rust-analyzer/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           cargo   1.0
 PortGroup           github  1.0
 
-github.setup        rust-analyzer rust-analyzer 2024-02-05
+github.setup        rust-analyzer rust-analyzer 2024-02-12
 github.tarball_from archive
 version             [string map { {-} {} } ${github.version}]
 revision            0
@@ -25,9 +25,9 @@ maintainers         @fabius \
                     openmaintainer
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  5a5e5a419ca4a9420b0350d2a509dd5d47d6622b \
-                        sha256  3ce30cbd657fbf34697cf53a7d2775fc41c40a9d4e48cf716fa8bec7fdc41ded \
-                        size    2763845
+                        rmd160  91457cbf5e5fd6405f9fcc897ba5cc3b5c03d70f \
+                        sha256  696417db82bdc13e2519b867e35408dd87962d2574703bb41563be9d9714aeba \
+                        size    2848386
 
 destroot {
     xinstall -m 0755 \
@@ -67,13 +67,13 @@ cargo.crates \
     crossbeam-utils                 0.8.16  5a22b2d63d4d1dc0b7f1b6b2747dd0088008a9be28b6ddf0b1e7d335e3037294 \
     ctrlc                            3.4.1  82e95fbd621905b854affdc67943b043a0fbb6ed7385fd5a25650d19a8a6cfdf \
     dashmap                          5.5.3  978747c1d849a7d2ee5e8adc0159961c48fb7e5db2f06af6723b80123bb53856 \
-    derivative                       2.2.0  fcc3dd5e9e9c0b295d6e1e4d811fb6f157d5ffd784b8d202fc62eac8035a770b \
     derive_arbitrary                 1.3.2  67e77553c4162a157adbf834ebae5b415acbecbeafc7a74b0e886657506a7611 \
     dissimilar                       1.0.7  86e3bdc80eee6e16b2b6b0f87fbc98c04bee3455e35174c0de1a125d0688c632 \
     dot                              0.1.4  a74b6c4d4a1cff5f454164363c16b72fa12463ca6b31f4b5f2035a65fa3d5906 \
     drop_bomb                        0.1.5  9bda8e21c04aca2ae33ffc2fd8c23134f3cac46db123ba97bd9d3f3b8a4a85e1 \
     either                           1.9.0  a26ae43d7bcc3b814de94796a5e736d4029efb0ee900c12e2d54c993ad1a1e07 \
     ena                             0.14.2  c533630cf40e9caa44bd91aadc88a75d75a4c3a12b4cfde353cbed41daa1e1f1 \
+    env_logger                      0.10.2  4cd405aab171cb85d6735e5c8d9db038c17d3ca007a4d2c25f337935c3d90580 \
     equivalent                       1.0.0  88bffebc5d80432c9b140ee17875ff173a8ab62faad5b257da912bd2f6c1c0a1 \
     expect-test                      1.4.1  30d9eafeadd538e68fb28016364c9732d78e420b9ff8853fa5e4058861e9f8d3 \
     filetime                        0.2.22  d4029edd3e734da6fe05b6cd7bd2960760a616bd2ddd0d59a0124746d6272af0 \
@@ -82,6 +82,7 @@ cargo.crates \
     form_urlencoded                  1.2.0  a62bc1cf6f830c2ec14a513a9fb124d0a213a629668a4186f329db21fe045652 \
     fsevent-sys                      4.1.0  76ee7a02da4d231650c7cea31349b889be2f45ddb3ef3032d2ec8185f6313fd2 \
     fst                              0.4.7  7ab85b9b05e3978cc9a9cf8fea7f01b494e1a09ed3037e16ba39edc7a29eb61a \
+    getrandom                       0.2.12  190092ea657667030ac6a35e305e62fc4dd69fd98ac98631e5d3a2b1575a12b5 \
     gimli                           0.27.3  b6c80984affa11d98d1b88b66ac8853f143217b399d3c74116778ff8fdb4ed2e \
     hashbrown                       0.14.3  290f1a1d9242c78d09ce40a5e87e7554ee637af1351968159f4952f028f75604 \
     heck                             0.4.1  95505c38b4572b2d910cecb0281560f54b440a19336cbbcb27bf6ce6adc6f5a8 \
@@ -102,6 +103,7 @@ cargo.crates \
     libloading                       0.8.0  d580318f95776505201b28cf98eb1fa5e4be3b689633ba6a3e6cd880ff22d8cb \
     libmimalloc-sys                 0.1.33  f4ac0e912c8ef1b735e92369695618dc5b1819f5a7bf3f167301a3ba1cea515e \
     line-index                       0.1.1  67d61795376ae2683928c218fda7d7d7db136fd38c06b7552904667f0d55580a \
+    linked-hash-map                  0.5.6  0717cef1bc8b636c6e1c1bbdefc09e6322da8a9321966e8928ef80d20f7f770f \
     lock_api                        0.4.10  c1cc9717a20b1bb222f333e6a92fd32f7d8a18ddc5a3191a11af45dcbf4dcd16 \
     log                             0.4.19  b06a4cde4c0f271a446782e3eff8de789548ce57dbc8eca9292c27f4a42004b4 \
     lsp-server                       0.7.6  248f65b78f6db5d8e1b1604b4098a28b43d21a8eb1deeca22b1c421b276c7095 \
@@ -132,6 +134,7 @@ cargo.crates \
     perf-event-open-sys              1.0.1  ce9bedf5da2c234fdf2391ede2b90fabf585355f33100689bc364a3ea558561a \
     petgraph                         0.6.4  e1d3afd2628e69da2be385eb6f2fd57c8ac7977ceeff6dc166ff1657b0e386a9 \
     pin-project-lite                 0.2.9  e0a7ae3ac2f1173085d398531c705756c94a4c56843785df85a60c1a0afac116 \
+    ppv-lite86                      0.2.17  5b40af805b3121feab8a3c29f04d8ad262fa8e0561883e7653e024ae4479e6de \
     proc-macro2                     1.0.69  134c189feb4956b20f6f547d2cf727d4c0fe06722b20a0eec87ed445a97f92da \
     protobuf                         3.2.0  b55bad9126f378a853655831eb7363b7b01b81d19f8cb1218861086ca4a1a61e \
     protobuf-support                 3.2.0  a5d4d7b8601c814cfb36bcebb79f0e61e45e1e93640cf778837833bbed05c372 \
@@ -139,20 +142,21 @@ cargo.crates \
     pulldown-cmark-to-cmark         10.0.4  0194e6e1966c23cc5fd988714f85b18d548d773e81965413555d96569931833d \
     quote                           1.0.28  1b9ab9c7eadfd8df19006f1cf1a4aed13540ed5cbc047010ece5826e10825488 \
     ra-ap-rustc_abi                 0.35.0  3c0baa423a2c2bfd6e4bd40e7215f7ddebd12a649ce0b65078a38b91068895aa \
-    ra-ap-rustc_index               0.33.0  5e5313d7f243b63ef9e58d94355b11aa8499f1328055f1f58adf0a5ea7d2faca \
     ra-ap-rustc_index               0.35.0  322b751895cc4a0a2ee0c6ab36ec80bc8abf5f8d76254c482f96f03c27c92ebe \
-    ra-ap-rustc_index_macros        0.33.0  a83108ebf3e73dde205b9c25706209bcd7736480820f90ded28eabaf8b469f25 \
+    ra-ap-rustc_index               0.36.0  f8a41dee58608b1fc93779ea365edaa70ac9927e3335ae914b675be0fa063cd7 \
     ra-ap-rustc_index_macros        0.35.0  054e25eac52f0506c1309ca4317c11ad4925d7b99eb897f71aa7c3cbafb46c2b \
+    ra-ap-rustc_index_macros        0.36.0  fbfe98def54c4337a2f7d8233850bd5d5349972b185fe8a0db2b979164b30ed8 \
     ra-ap-rustc_lexer               0.35.0  c8da0fa51a1a97ba4296a1c78fa454815a153b472e2546b6338a0902ad59e015 \
     ra-ap-rustc_parse_format        0.35.0  3851f930a54adcb76889983dcd5c00a0c4e206e190e1384dbc00d49b82dfb45e \
-    ra-ap-rustc_pattern_analysis    0.33.0  6c4085e0c771fd4b883930b599ef42966b855762bbe4052c17673b3253421a6d \
+    ra-ap-rustc_pattern_analysis    0.36.0  b5529bffec7530b4a3425640bfdfd9b95d87c4c620f740266c0de6572561aab4 \
+    rand                             0.8.5  34af8d1a0e25924bc5b7c43c079c942339d8f0a8b57c39049bef581b46327404 \
+    rand_chacha                      0.3.1  e6c10a63a0fa32252be49d21e7709d4d4baf8d231c2dbce1eaa8141b9b127d88 \
+    rand_core                        0.6.4  ec0be4795e2f6a28069bec0b5ff3e2ac9bafc99e6a9a7dc3547996c5c816922c \
     rayon                            1.8.0  9c27db03db7734835b3f53954b534c91069375ce6ccaa2e065441e07d9b6cdb1 \
     rayon-core                      1.12.0  5ce3fb6ad83f861aac485e76e1985cd109d9a3713802152be56c3b1f0e0658ed \
     redox_syscall                    0.3.5  567664f262709473930a4bf9e51bf2ebf3348f2e748ccc50dea20646858f8f29 \
     redox_syscall                    0.4.1  4722d768eff46b75989dd134e5c353f0d6296e5aaa3132e776cbdb56be7731aa \
     rowan                          0.15.15  32a58fa8a7ccff2aec4f39cc45bf5f985cec7125ab271cf681c279fd00192b49 \
-    rust-analyzer-salsa       0.17.0-pre.6  719825638c59fd26a55412a24561c7c5bcf54364c88b9a7a04ba08a6eafaba8d \
-    rust-analyzer-salsa-macros 0.17.0-pre.6 4d96498e9684848c6676c399032ebc37c52da95ecbefa83d71ccc53b9f8a4a8e \
     rustc-demangle                  0.1.23  d626bb9dae77e28219937af045c257c28bfd3f69333c512553507f5f9798cb76 \
     rustc-hash                       1.1.0  08d43f7aa6b08d49f382cde6a7982047c3426db949b1424bc4b7ec9ae12c6ce2 \
     rustc_apfloat  0.2.0+llvm-462a31f5a5ab  465187772033a5ee566f69fe008df03628fce549a0899aae76f0a0c2e34696be \
@@ -172,9 +176,10 @@ cargo.crates \
     snap                             1.1.0  5e9f0ab6ef7eb7353d9119c170a436d1bf248eea575ac42d19d12f4e34130831 \
     stable_deref_trait               1.2.0  a8f112729512f8e442d81f95a8a7ddf2b7c6b8a1a6f509a95864142b30cab2d3 \
     static_assertions                1.1.0  a2eb9349b6444b326872e140eb1cf5e7c522154d69e7a0ffb0fb81c06b37543f \
-    syn                            1.0.109  72b64191b275b66ffe2469e8af2c1cfe3bafa67b529ead792a6d0160888b4237 \
     syn                             2.0.39  23e78b90f2fcf45d3e842032ce32e3f2d1545ba6636271dcbf24fa306d87be7a \
     synstructure                    0.13.0  285ba80e733fac80aa4270fbcdf83772a79b80aa35c97075320abfee4a915b06 \
+    test-log                        0.2.14  6159ab4116165c99fc88cce31f99fa2c9dbe08d3691cb38da02fc3b45f357d2b \
+    test-log-macros                 0.2.14  7ba277e77219e9eea169e8508942db1bf5d8a41ff2db9b20aab5a5aadc9fa25d \
     text-size                        1.1.1  f18aa187839b2bdb1ad2fa35ead8c4c2976b64e4363c386d45ac0f7ee85c9233 \
     thiserror                       1.0.40  978c9a314bd8dc99be594bc3c175faaa9794be04a5a5e153caba6915336cebac \
     thiserror-impl                  1.0.40  f9456a42c5b0d803c8cd86e73dd7cc9edd429499f37a3550d286d5e86720569f \
